--- a/frontend/src/app/chatbot-styles.css
+++ b/frontend/src/app/chatbot-styles.css
@@ -42,13 +42,18 @@
 }
 
 .react-chatbot-kit-chat-bot-message {
-    width: 70%;
+    width: 72%;
+}
+
+.react-chatbot-kit-user-chat-message {
+    width: 72%;
 }
 
 /* Change user message bubbles */
 .react-chatbot-kit-chat-message-container .react-chatbot-kit-user-chat-message {
-    background-color: #ebebeb; 
+    background-color: #dfdfdf; 
     color: rgb(51, 51, 51);
+    font-weight: 500;
     }
 
 /* Change bot message bubbles */
@@ -70,10 +75,14 @@
     }
 
 
-
+/* avatar arrows */
 .react-chatbot-kit-chat-bot-message-arrow {
     border-right: 8px solid #003964;
     }
+
+.react-chatbot-kit-user-chat-message-arrow {
+    border-left: 8px solid #dfdfdf;
+}
 
 /* chatbot avatar styling */
 .custom-bot-avatar-container {
